fix overlay spacing and margin

--- a/app/assets/sass/core/components/_impact.scss
+++ b/app/assets/sass/core/components/_impact.scss
@@ -30,6 +30,16 @@
         margin-top: 0;
       }
     }
+    @include media(mobile) {
+      padding: $gutter*0.25;
+      margin: 0;
+      .overlay-content {
+        margin: 0;
+      }
+      .overlay-box {
+        margin: 0;
+      }
+    }
   }
 }
 
