--- a/app/assets/sass/core/components/_preview.scss
+++ b/app/assets/sass/core/components/_preview.scss
@@ -26,6 +26,11 @@
     margin-top: $baseline*2;
     margin-bottom: $baseline*2;
     @extend %grid-row-b;
+    @include media(mobile) {
+      .sub-section-heading {
+        margin-bottom: $baseline*0.25;
+      }
+    }
     .preview {
       @include grid-column-b(1 / 3);
       &:nth-child(2) {
